--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "osmium-dao",
+  "name": "osmium_web",
+  "homepage": "https://OsmiumDAO.github.io/osmium_web",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -19,6 +20,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -43,3 +46,4 @@
     ]
   }
 }
+
