--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
+    "gitbuild": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -46,3 +47,4 @@
     ]
   }
 }
+
