--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "osmium_web",
-  "homepage": "https://OsmiumDAO.github.io/osmium_web",
+  "homepage": "https://osmiumdao.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
